--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -15,6 +15,10 @@
   font-weight: 900;
 }
 
+.icon-menu {
+  color: #D19E1D !important;
+}
+
 .far {
   font-family: 'Font Awesome 5 Free', 'fa-regular-400';
   font-weight: 400;
@@ -22,6 +26,11 @@
 
 // Common page class
 .page__content {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  padding: 0;
+  background-color: #FFF;
   &-icon,
   &-placeholder {
     color: const(grey);
@@ -29,7 +38,6 @@
     vertical-align: center;
     horizontal-align: center;
   }
-
   &-icon {
     font-size: 72;
     vertical-align: top;
@@ -40,4 +48,173 @@
 // Drawer navigation custom styles
 .nt-drawer__header-image {
   color: const(grey);
+}
+
+.nt-drawer__content {
+  color: #FFF;
+}
+
+.action-bar {
+  background-color: #fff !important;
+}
+
+.action-bar-title {
+  color: #FFF;
+  font-family: "Parisienne", "Parisienne-Regular";
+  font-weight: 400;
+  font-size: 22px;
+  color: #000;
+}
+
+.menu-icon {
+ color: #000;
+}
+
+.presentation-img {
+  width: auto;
+  height: 30%;
+  margin-top: 10%;
+}
+
+.presentation-text {
+  font-family: "Parisienne", "Parisienne-Regular";
+  font-weight: 400;
+  font-size: 20;
+  text-align: justify;
+  justify-items: inter-word;
+  margin: 10%;
+}
+
+.drawer-header {
+  padding: 5;
+  background-color: #FFF !important;
+  display: flex;
+  flex-direction: column;
+  height: 25%;
+  width: 100%;
+  padding: 25%;
+  color: #766D6D;
+}
+
+.header-img {
+  width: auto;
+  height: 80%;
+}
+
+.drawer-icons {
+  width: 30;
+  height: 30;
+  margin: 5;
+}
+
+.drawer-icon-text {
+  color: #D19E1D;
+  font-family: "Parisienne", "Parisienne-Regular";
+  font-size: 18;
+  margin: 5;
+  margin-left: 10;
+}
+
+.drawer-list-item {
+  color: #D19E1D;
+  margin: 5;
+  &-selected {
+    background-color: #183486;
+    margin: 5;
+    color: #D19E1D;
+  }
+  &:focus {
+    background-color: #183486;
+    margin: 5;
+    color: #D19E1D;
+  }
+  &:blur {
+    background-color: transparent;
+    margin: 5;
+    color: #D19E1D;
+  }
+}
+
+.rosary-title {
+  font-family: "Parisienne", "Parisienne-Regular";
+  font-size: 32;
+  font-weight: 600;
+  margin-right: 10%;
+  margin-left: 10%;
+  text-align: justify;
+  justify-items: inter-word;
+  margin-top: 2;
+  margin-bottom: 16;
+}
+
+.rosary-body {
+  font-family: "Parisienne", "Parisienne-Regular";
+  font-weight: 400;
+  font-size: 22;
+  text-align: justify;
+  justify-items: inter-word;
+  margin-right: 10%;
+  margin-left: 10%;
+}
+
+.rosary-body-how-to {
+  font-family: "Parisienne", "Parisienne-Regular";
+  font-weight: 800;
+  font-size: 18;
+  text-align: justify;
+  justify-items: inter-word;
+  margin-right: 10%;
+  margin-left: 10%;
+  margin-top: 16;
+}
+
+.rosary-body-how-to-title {
+  font-family: "Parisienne", "Parisienne-Regular";
+  font-weight: 800;
+  font-size: 18;
+  text-align: center;
+  margin-right: 0.8%;
+  margin-left: 0.8%;
+  margin-top: 30;
+  margin-bottom: 20;
+}
+
+.week-page-title {
+  font-family: "Parisienne", "Parisienne-Regular";
+  font-weight: 800;
+  font-size: 22;
+  text-align: center;
+  margin-right: 0.8%;
+  margin-left: 0.8%;
+  margin-top: 30;
+  margin-bottom: 20;
+}
+
+.week-misteries {
+  font-family: "Parisienne", "Parisienne-Regular";
+  font-weight: 100;
+  font-size: 22;
+  text-align: left;
+  margin-right: 5%;
+  margin-left: 5%;
+  margin-top: 20;
+  margin-bottom: 20;
+  text-align: justify;
+  justify-items: inter-word;
+}
+
+.evangelion-references {
+  /*font-family: "Parisienne", "Parisienne-Regular";*/
+  font-weight: 100;
+  font-size: 18;
+  text-align: left;
+  margin-right: 5%;
+  margin-left: 5%;
+  margin-top: 3;
+  margin-bottom: 3;
+}
+
+.references-group {
+  margin-top: 10%;
+  bottom: 0;
 }
