--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -190,12 +190,14 @@
 
   <GridLayout tkMainContent>
     <Frame animated="true" actionBarVisibility="never">
-    <Page
-      statusBarStyle="light"
-      backgroundSpanUnderStatusBar="true"
-      androidStatusBarBackground="#FF000000">
-    <page-router-outlet></page-router-outlet>
-    </Page>
+      <Page
+        statusBarStyle="light"
+        backgroundSpanUnderStatusBar="true"
+        androidStatusBarBackground="#FF000000"
+      >
+        <page-router-outlet></page-router-outlet>
+      </Page>
     </Frame>
   </GridLayout>
 </RadSideDrawer>
+
