--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -31,18 +31,7 @@
   flex: 1;
   padding: 0;
   background-color: #FFF;
-  &-icon,
-  &-placeholder {
-    color: const(grey);
-    font-size: 20;
-    vertical-align: center;
-    horizontal-align: center;
-  }
-  &-icon {
-    font-size: 72;
-    vertical-align: top;
-    margin-top: 20%;
-  }
+  height: 100%;
 }
 
 // Drawer navigation custom styles
@@ -146,27 +135,6 @@
   }
 }
 
-@keyframes zoom-in-zoom-out {
-  0% {
-    transform: scale(0.75, 0.75);
-  }
-
-  25% {
-    transform: scale(0.8, 0.8);
-  }
-
-  50% {
-    transform: scale(0.85, 0.85);
-  }
-
-  75% {
-    transform: scale(0.95, 0.95);
-  }
-
-  100% {
-    transform: scale(1.0, 1.0);
-  }
-}
 
 .rosary-title {
   font-family: "Parisienne", "Parisienne-Regular";
@@ -226,28 +194,56 @@
 .week-misteries {
   font-family: "Parisienne", "Parisienne-Regular";
   font-weight: 100;
-  font-size: 22;
+  font-size: 21;
   text-align: left;
   margin-right: 5%;
   margin-left: 5%;
-  margin-top: 20;
-  margin-bottom: 20;
-  text-align: justify;
-  justify-items: inter-word;
+  margin-top: 15;
+  margin-bottom: 15;
 }
 
 .evangelion-references {
   /*font-family: "Parisienne", "Parisienne-Regular";*/
   font-weight: 100;
-  font-size: 18;
+  font-size: 14;
   text-align: left;
   margin-right: 5%;
   margin-left: 5%;
-  margin-top: 3;
-  margin-bottom: 3;
+  margin-top: 1;
+  margin-bottom: 1;
+  text-align: center;
 }
 
 .references-group {
-  margin-top: 10%;
-  bottom: 0;
+  margin-top: 15%;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  border: 0.8;
+  background-color: #f5f5f5;
+  border-color: #000;
+  border-radius: 8;
+  text-align: center;
+}
+
+.bottom-sheet {
+  margin-top: 100%;
+  height: 0%;
+  background-color: #f5f5f5;
+  border: 0.8;
+  border-top-left-radius: 12;
+  border-top-right-radius: 12;
+  border-color: #000;
+}
+
+.close-button {
+  background-color: #fff;
+  font-size: 18;
+  text-align: center;
+  border-radius: 100%;
+  color: #000;
+  width: 40;
+  height: 40;
+  margin-left: auto;
+  margin-top: -30;
 }
