--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -195,11 +195,18 @@
   font-family: "Parisienne", "Parisienne-Regular";
   font-weight: 100;
   font-size: 21;
-  text-align: left;
+  text-align: center;
   margin-right: 5%;
   margin-left: 5%;
   margin-top: 15;
   margin-bottom: 15;
+  background-color: transparent;
+  z-index: 0;
+  &:active {
+    background-color: #e8f4f8;
+    border-color: transparent;
+    border-width: 0;
+  }
 }
 
 .evangelion-references {
@@ -252,4 +259,29 @@
   width: 48;
   height: 48;
   color: #183486;
+}
+
+.scrollview {
+  width: 100%;
+  height: 200;
+}
+
+.evangelion-text {
+  text-align: justify;
+  text-justify:  inter-word;
+  font-size: 18;
+  margin: 14;
+  padding: 8;
+  font-weight: 100;
+  font-family: "Parisienne", "Parisienne-Regular";
+}
+
+.mistery-title {
+  font-size: 18;
+  margin: 2;
+  padding: 8;
+  margin-right: 12;
+  text-align: center;
+  font-weight: 300;
+  font-family: "Parisienne", "Parisienne-Regular";
 }
