--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -201,11 +201,15 @@
   margin-top: 15;
   margin-bottom: 15;
   background-color: transparent;
+  border-width: 0.5;
+  border-color: #000;
   z-index: 0;
+  border-radius: 12;
   &:active {
     background-color: #e8f4f8;
     border-color: transparent;
     border-width: 0;
+    border-radius: 12;
   }
 }
 
@@ -277,7 +281,9 @@
 }
 
 .mistery-title {
+  position: absolute;
   font-size: 18;
+  margin-top: -10;
   margin: 2;
   padding: 8;
   margin-right: 12;
