--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,9 +63,9 @@
 
         <GridLayout
           columns="auto, *"
-          class="{{activatedUrl === '/search' ? 'drawer-list-item-selected' : 'drawer-list-item'}}"
-          [class.-selected]="isComponentSelected('/search')"
-          (tap)="onNavItemTap('/search')"
+          class="{{activatedUrl === '/tuesday' ? 'drawer-list-item-selected' : 'drawer-list-item'}}"
+          [class.-selected]="isComponentSelected('/tuesday')"
+          (tap)="onNavItemTap('/tuesday')"
         >
           <Image
             col="0"
