--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -203,6 +203,7 @@
   background-color: transparent;
   border-width: 0.5;
   border-color: #000;
+  height: auto;
   z-index: 0;
   border-radius: 12;
   &:active {
@@ -210,6 +211,7 @@
     border-color: transparent;
     border-width: 0;
     border-radius: 12;
+    height: auto;
   }
 }
 
@@ -223,6 +225,7 @@
   margin-top: 1;
   margin-bottom: 1;
   text-align: center;
+
 }
 
 .references-group {
@@ -248,7 +251,7 @@
 }
 
 .close-button {
-  background-color: #fff;
+  background-color: #f5f5f5;
   font-size: 18;
   text-align: center;
   border-radius: 100%;
@@ -276,8 +279,8 @@
   font-size: 18;
   margin: 14;
   padding: 8;
-  font-weight: 100;
-  font-family: "Parisienne", "Parisienne-Regular";
+  font-weight: 200;
+  /*font-family: "Parisienne", "Parisienne-Regular";*/
 }
 
 .mistery-title {
@@ -289,5 +292,5 @@
   margin-right: 12;
   text-align: center;
   font-weight: 300;
-  font-family: "Parisienne", "Parisienne-Regular";
+ /* font-family: "Parisienne", "Parisienne-Regular";*/
 }
