add storage service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -81,9 +81,9 @@
 
         <GridLayout
           columns="auto, *"
-          class="{{activatedUrl === '/featured' ? 'drawer-list-item-selected' : 'drawer-list-item'}}"
-          [class.-selected]="isComponentSelected('/featured')"
-          (tap)="onNavItemTap('/featured')"
+          class="{{activatedUrl === '/wednesday' ? 'drawer-list-item-selected' : 'drawer-list-item'}}"
+          [class.-selected]="isComponentSelected('/wednesday')"
+          (tap)="onNavItemTap('/wednesday')"
         >
           <Image
             col="0"
