--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -280,7 +280,7 @@
   margin: 14;
   padding: 8;
   font-weight: 200;
-  /*font-family: "Parisienne", "Parisienne-Regular";*/
+  font-family: "Parisienne", "Parisienne-Regular";
 }
 
 .mistery-title {
@@ -292,5 +292,5 @@
   margin-right: 12;
   text-align: center;
   font-weight: 300;
- /* font-family: "Parisienne", "Parisienne-Regular";*/
+ font-family: "Parisienne", "Parisienne-Regular";
 }
