--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -203,7 +203,7 @@
   background-color: transparent;
   border-width: 0.5;
   border-color: #000;
-  height: auto;
+  height: 60;
   z-index: 0;
   border-radius: 12;
   &:active {
@@ -211,7 +211,7 @@
     border-color: transparent;
     border-width: 0;
     border-radius: 12;
-    height: auto;
+    height: 60;
   }
 }
 
@@ -229,7 +229,7 @@
 }
 
 .references-group {
-  margin-top: 15%;
+  margin-top: 3%;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
