--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -152,18 +152,18 @@
 
          <GridLayout
           columns="auto, *"
-          class="{{activatedUrl === '/snd' ? 'drawer-list-item-selected' : 'drawer-list-item'}}"
-          [class.-selected]="isComponentSelected('/home')"
-          (tap)="onNavItemTap('/home')"
+          class="{{activatedUrl === '/sunday' ? 'drawer-list-item-selected' : 'drawer-list-item'}}"
+          [class.-selected]="isComponentSelected('/sunday')"
+          (tap)="onNavItemTap('/sunday')"
         >
           <Image col="0"
             src="~/app/assets/sunday-icon.png"
-            class="{{activatedUrl === '/snd' ? 'drawer-icons-selected' : 'drawer-icons'}}"
+            class="{{activatedUrl === '/sunday' ? 'drawer-icons-selected' : 'drawer-icons'}}"
           />
           <Label
             col="1"
             text="Domingo"
-            class="{{activatedUrl === '/snd' ? 'drawer-icon-text-selected' : 'drawer-icon-text'}}"
+            class="{{activatedUrl === '/sunday' ? 'drawer-icon-text-selected' : 'drawer-icon-text'}}"
           ></Label>
         </GridLayout>
 
