--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -292,5 +292,35 @@
   margin-right: 12;
   text-align: center;
   font-weight: 300;
- font-family: "Parisienne", "Parisienne-Regular";
+  font-family: "Parisienne", "Parisienne-Regular";
 }
+
+.liturgy {
+  font-weight: 100;
+  font-family: "Parisienne", "Parisienne-Regular";
+  font-size: 16;
+
+  &-title {
+    font-weight: 100;
+    font-family: "Parisienne", "Parisienne-Regular";
+    font-size: 16;
+    font-weight: bold;
+  }
+
+  &-evangelion {
+    font-weight: 300;
+    font-family: "Parisienne", "Parisienne-Regular";
+    font-size: 22;
+  }
+
+  &-container {
+    background-color: #f5f5f5;
+    border-width: 0.8;
+    border-color: #f5f5f5;
+    border-radius: 12;
+  }
+
+}
+
+
+
