--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -173,17 +173,32 @@
 
         <GridLayout
           columns="auto, *"
-          class="drawer-list-item"
-          [class.-selected]="isComponentSelected('/settings')"
-          (tap)="onNavItemTap('/settings')"
+          class="{{activatedUrl === '/liturgy' ? 'drawer-list-item-selected' : 'drawer-list-item'}}"
+          [class.-selected]="isComponentSelected('/liturgy')"
+          (tap)="onNavItemTap('/liturgy')"
         >
           <Image
             col="0"
             src="~/app/assets/church-icon.png"
-            class="{{activatedUrl === '/settings' ? 'drawer-icons-selected' : 'drawer-icons'}}"
+            class="{{activatedUrl === '/liturgy' ? 'drawer-icons-selected' : 'drawer-icons'}}"
           />
           <Label col="1" text="Liturgia" class="drawer-icon-text"></Label>
         </GridLayout>
+
+        <GridLayout
+          columns="auto, *"
+          class="{{activatedUrl === '/novena' ? 'drawer-list-item-selected' : 'drawer-list-item'}}"
+          [class.-selected]="isComponentSelected('/novena')"
+          (tap)="onNavItemTap('/novena')"
+        >
+          <Image
+            col="0"
+            src="~/app/assets/cross.png"
+            class="{{activatedUrl === '/novena' ? 'drawer-icons-selected' : 'drawer-icons'}}"
+          />
+          <Label col="1" text="Novena" class="drawer-icon-text"></Label>
+        </GridLayout>
+
       </StackLayout>
     </ScrollView>
   </GridLayout>
