--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -182,7 +182,7 @@
             src="~/app/assets/church-icon.png"
             class="{{activatedUrl === '/liturgy' ? 'drawer-icons-selected' : 'drawer-icons'}}"
           />
-          <Label col="1" text="Liturgia" class="drawer-icon-text"></Label>
+          <Label col="1" text="Evangelho do dia" class="drawer-icon-text"></Label>
         </GridLayout>
 
         <GridLayout
