--- a/src/app/novena/novena.component.html
+++ b/src/app/novena/novena.component.html
@@ -12,18 +12,18 @@
 </ActionBar>
 
 <StackLayout class="page__content">
-  <label textWrap="true" class="rosary-body-how-to-title" style="font-size: 20;">
+  <label textWrap="true" class="rosary-body-how-to-title" style="font-size: 18;">
     Novena de Jesus das Santas Chagas :
   </label>
 
   <ScrollView>
     <label class="rosary-body" textWrap="true">
       Por vossas Santas Chagas. Vossas Chagas Gloriosas. O Cristo Senhor me
-      proteja e me Guarde.&#13; Senhor Jesus fostes elevado na cruz para que,
+      proteja e me Guarde. Senhor Jesus fostes elevado na cruz para que,
       por vossas Santas Chagas, sejam curadas as de nossas Almas. Eu vos louvo e
       agradeço pelo vosso ato redentor. Carregaste em vosso próprio corpo os
       meus pecados e de toda a humanidade. Nas vossas Santas Chagas coloco.
-      Minhas inteções. Minhas Preocupações, ansiedades e angústias. Minhas
+      Minhas intenções. Minhas Preocupações, ansiedades e angústias. Minhas
       enfermidades físicas e psíquicas. Meus Sofrimentos, dores, alegrias e
       necessidades. Em vossas Santas Chagas Senhor, Coloco minha Família.
       Envolvei, Senhor, a mim e meus familiares protegendo-nos do mal. (instante
